<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Movies In Theaters</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search movie</string>
    <string name="action_sort">Select Sorting</string>
    <string name="list_title">Enjoy the Movies</string>
    <string name="video_title">Watch Trailer</string>
    <string name="title_activity_detail">Movie Detail</string>
    <string name="title_list_preference">Select Sorting</string>
    <string name="dialog_title_sort">Select Sorting</string>
    <string name="pref_sort_key" translatable="false">sort</string>
    <string name="pref_sort_default" translatable="false">now_playing</string>
    <array name="pref_sort_entries">
        <item>User Rating</item>
        <item>Popularity</item>
        <item>Now Playing</item>
    </array>
    <array name="pref_sort_entry_values" translatable="false">
        <item>top_rated</item>
        <item>popular</item>
        <item>now_playing</item>
    </array>

    <string name="action_lang">Select Language</string>
    <string name="title_lang_preference">Language</string>
    <string name="dialog_title_lang">Select Language</string>
    <string name="pref_lang_key" translatable="false">lang</string>
    <string name="pref_lang_default" translatable="false">en-US</string>
    <array name="pref_lang_entries" translatable="false">
        <item>English</item>
        <item>Türkçe</item>
    </array>
    <array name="pref_lang_entry_values" translatable="false">
        <item>en-US</item>
        <item>tr-TR</item>
    </array>

</resources>
